[gd_scene load_steps=4 format=3 uid="uid://dkioyxu7qut5"]

[ext_resource type="Script" path="res://entities/symbol/symbol.gd" id="1_dy4dl"]
[ext_resource type="PackedScene" uid="uid://bumds1yeglelv" path="res://entities/grid/grid.tscn" id="2_5ic7h"]
[ext_resource type="PackedScene" uid="uid://dfeodchae3m2h" path="res://entities/line/line.tscn" id="3_q25aw"]

[node name="Symbol" type="Node2D"]
script = ExtResource("1_dy4dl")

[node name="Grid" parent="." instance=ExtResource("2_5ic7h")]

[node name="PatternToMatch" type="Line2D" parent="."]

[node name="PlayerLine" parent="." instance=ExtResource("3_q25aw")]

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="cells_selected" from="Grid" to="." method="_on_grid_cells_selected"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
